--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,19 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".activity.register">
-
-        </activity>
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.PageAwal">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.login">
+        <activity android:name=".activity.register">
+        </activity>
+        <activity android:name=".activity.MainActivity">
 
+        </activity>
+        <activity android:name=".activity.login">
         </activity>
     </application>
 
